<resources>
    <string name="app_name">Practica2</string>
    <string name="NuevoContacto">Nuevo Contacto</string>
    <string name="Nombre">Nombre:</string>
    <string name="Apellido">Apellidos:</string>
    <string name="Email">E-Mail:</string>
    <string name="Telefono">Teléfono</string>
    <string name="Notas">Notas:</string>
    <string name="InfoImagen">Imagen de Contacto</string>
    <string name="InfoComida">Imagen de una Hamburguesa</string>
    <string name="TextoDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris imperdiet lectus justo, sit amet faucibus tortor consequat eu. Vestibulum eleifend quam nec sapien.</string>
    <string name="Receta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris imperdiet lectus justo, sit amet faucibus tortor consequat eu. Vestibulum eleifend quam nec sapien aliquam lacinia. Nunc quis rhoncus ex, non pharetra magna. Sed porttitor leo in tempus pretium. Aliquam porttitor rhoncus leo in fermentum. Donec nec justo sodales orci viverra aliquet. Cras hendrerit, felis ut facilisis fermentum, odio lectus bibendum sapien, et euismod ligula mi in mauris. Duis a nulla maximus, sollicitudin lectus a, molestie enim. Phasellus varius magna dolor, dignissim mollis libero malesuada et.

In vulputate auctor malesuada. Nunc vel interdum urna. Quisque eget lectus elit. Donec volutpat maximus nunc, vitae tincidunt enim rutrum ut. Ut cursus, mi quis fermentum porta, risus libero mollis nisi, sed congue massa lacus sit amet magna. Vivamus in velit nec nibh tempor sodales. Fusce rhoncus urna vitae diam placerat finibus. Duis ut lorem id sem semper varius id fringilla magna.

        Sed ultrices nunc iaculis, gravida mauris ac, auctor eros. Maecenas fermentum felis et vulputate vestibulum. Proin luctus nulla justo, sed varius purus gravida nec. Morbi sapien dui, pulvinar nec pulvinar et, vulputate et tellus. Proin at eros ullamcorper, maximus nulla non, gravida ligula.
</string>
    <string name="btPelicula">PELÍCULA</string>
    <string name="title">Spider-Man into the Spider-Verse</string>
    <string name="filmInfo">December 2018 +7 116 minutes</string>
    <string name="ratings">1M Ratings</string>
    <string name="calification">+7 Years</string>
    <string name="rottenTomato">97%</string>
    <string name="similar">Similar</string>
    <string name="filmDescription">Phil Lord y Chris Miller, las mentes creativas detrás de La LEGO Película e Infiltrados en Clase, reúnen su extraordinario talento para crear una nueva y diferente visión del universo Spider-Man. Con revolucionario estilo visual nunca visto, Spider-Man: Un Nuevo Universo presenta a Miles Morales, un adolescente de Brooklyn que se convierte en el nuevo hombre-araña y descubre las ilimitadas posibilidades del multiuniverso donde más de uno puede llevar la máscara.</string>
    <string name="btBuy">BUY FROM 8,99€</string>
    <string name="btRent">RENT FROM 3,99€</string>
</resources>