<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView android:id="@+id/txtNuevoContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NuevoContacto"
        android:textSize="24sp"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/lnlNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nombre"/>

        <EditText android:id="@+id/edtNombreC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="200sp"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView android:id="@+id/txtApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Apellido"/>

        <EditText android:id="@+id/edtApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="200sp"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"/>

        <EditText android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="200sp"
            android:inputType="textEmailAddress"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView android:id="@+id/txtTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Telefono"/>

        <EditText android:id="@+id/edtTelefonoC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="200sp"
            android:inputType="phone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlNotas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:id="@+id/txtNotas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/Notas" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lnlNotasText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText android:id="@+id/edtNotas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffe7ba"
            android:gravity="top"
            android:minWidth="200sp"
            android:inputType="textMultiLine"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnlBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Aceptar"/>

        <Button android:id="@+id/btnReiniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Reiniciar"/>

        <Button android:id="@+id/btnSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Salir"/>
    </LinearLayout>
</LinearLayout>